# swiss-maps

./: .gitignore  CLAUDE.md  README.md  TODO.md  eslint.config.mjs  next.config.ts  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
.githooks/: pre-push
app/: globals.css  layout.tsx  page.tsx
components/: app-header.test.tsx  app-header.tsx  app-layout.tsx  app-sidebar.test.tsx  app-sidebar.tsx  data-layout-elements.test.tsx  data-layout-elements.tsx  data-layout.tsx  demographics-layout.tsx  demographics-map-loader.tsx  demographics-map.tsx  demographics-shell.tsx  demographics-sidebar.test.tsx  demographics-sidebar.tsx  language-switcher.test.tsx  language-switcher.tsx  map-loader.tsx  map-shell.tsx  map-tooltip.test.tsx  map-tooltip.tsx  result-block.test.tsx  result-block.tsx  swiss-map.tsx  trade-layout.tsx  trade-map-loader.tsx  trade-map.tsx  trade-partner-card.test.tsx  trade-partner-card.tsx  trade-partner-row.test.tsx  trade-partner-row.tsx  trade-sector-bar.test.tsx  trade-sector-bar.tsx  trade-shell.tsx  trade-sidebar.test.tsx  trade-sidebar.tsx  trade-sparkline.test.tsx  trade-sparkline.tsx  vorlage-info-modal.test.tsx  vorlage-info-modal.tsx  (+2 more)
pipeline/: DATA_SOURCES.md  README.md  pyproject.toml
pipeline/notebooks/: 01_explore_boundaries.ipynb
pipeline/scripts/: download_boundaries.py  download_demographics.py  download_erlaeuterungen.py  download_income.py  download_language.py  download_religion.py  download_trade.py  download_typology.py  download_votations.py  export_geo.py  process_trade_sectors.py
(+75 files in other folders)
