[project]
name = "swiss-maps-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "geopandas>=0.14",
    "pandas>=2.2",
    "requests>=2.31",
    "shapely>=2.0",
    "pyogrio>=0.7",
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "fiona>=1.9",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
]
